Typesafe lambdas: Prototype of GraalVM with sbt